# arduino-esp32

./: CMakeLists.txt
cores/esp32/: Arduino.h  Stream.cpp  WString.cpp  dummySerial.cpp
